<resources>
    <string name="app_name">Penguins Read</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="name">The Penguins Club</string>
    <string name="hello_blank_fragment">Hello</string>
    <string name="noPosts">No posts in this category yet!</string>
    <string name="logo">P</string>
    <string name="appDesc"><b>The Penguins Club</b> একটি কমিউনিটি কেন্দ্রিক লিনাক্স, ইউনিক্স, ব্যবসা এবং নিরাপত্তা সংক্রান্ত বাংলা ম্যাগাজিন। </string>
    <string name="site">Website:</string>
    <string name="url">https://thepenguins.club/</string>
    <string name="credits">Credits:</string>
    <string name="powered">Powered by:</string>
    <string name="technoFaq">Techno FAQ Digital Media</string>
    <string name="created">This app is made with ❤ by</string>
    <string name="dev">Infinite</string>
    <string name="github">https://github.com/r00t3d0</string>
    <string name="community">Our community:</string>
    <string name="penguins">https://t.me/joinchat/F9jtaRUVVujT8Gdi7SzbeQ</string>
    <string name="bn">The Penguins - Linux and FOSS</string>
    <string name="international">Techno FAQ</string>
    <string name="inter">https://t.me/Techno_FAQ</string>
    <string name="thanks">Special thanks to:</string>

    <string-array name="thanksTo">
        <item>Sunit Kumar Nandi</item>
        <item>Sammay Sarkar</item>
        <item>Fazle Rabbi</item>
        <item>Jamil Hasan Rahul</item>
        <item>Mahbub Hasan</item>
        <item>ソシオパス [404]</item>
        <item>CoKilll</item>
        <item>Codebid</item>
    </string-array>

    <string name="copyright">\n © Techno FAQ Digital Media. \n All Rights Reserved.</string>

</resources>